2013-10-07  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.md ("tbegin", "tbegin_nofloat", "tbegin_retry")
	("tbegin_retry_nofloat", "tend", "tabort", "tx_assist"): Remove
	constraint letters from expanders.
	("tbegin_retry", "tbegin_retry_nofloat"): Change predicate of the
	retry count to general_operand.
	("tabort"): Give operand 0 a mode.
	("tabort_1"): Add mode and constraint letter for operand 0.
	* doc/extend.texi: Fix protoype of __builtin_non_tx_store.

2013-10-04  Jeff Law  <law@redhat.com>

	* tree-ssa-threadedge.c: Fix some trailing whitespace problems.

	* tree-ssa-threadedge.c (thread_through_normal_block): Broken out of ...
	(thread_across_edge): Here.  Call it.

2013-10-04  Cary Coutant  <ccoutant@google.com>

	* dwarf2out.c (dw_sra_loc_expr): Release addr_table entries when
        discarding a location list expression (or a piece of one).

2013-10-03  Jan Hubicka  <jh@suse.cz>

	* config/i386/i386.c (ix86_issue_rate): Pentium4, Nocona has issue
	rate of 2.  Core2, Corei7 and Haswell has issue rate of 4.
	(ix86_adjust_cost): Remove Atom case; fix core2/corei7/Haswell case.

2013-10-03  Jan Hubicka  <jh@suse.cz>

	* config/i386/i386.c (ix86_option_override_internal): Do not enable
	accumulate-outgoing-args when producing unwind info.

2013-10-03  Wei Mi  <wmi@google.com>

	* lra-constraints.c (insert_move_for_subreg): New function
	extracted from simplify_operand_subreg.
	(simplify_operand_subreg): Add reload for paradoxical subreg.

2013-10-03  Rong Xu  <xur@google.com>

	* ipa-inline-analysis.c (find_foldable_builtin_expect): Find
	the candidate of builtin_expect such that we should fix the
	size/time estimation.
	(estimate_function_body_sizes): Do the acutally size/time fix-up
	for builtin_expect.

2013-10-03  Rong Xu  <xur@google.com>

	* predict.c (tree_predict_by_opcode): Get the probability
	for builtin_expect from param builtin_expect_probability.
	* params.def (BUILTIN_EXPECT_PROBABILITY): New parameter.