@@ -1,5 +1,9 @@
 2013-10-07  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
 
+	* gcc.target/s390/htm-nofloat-2.c: New testcase.
+
+2013-10-07  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
+
 	* gcc.target/s390/htm-1.c: Add more tests to cover different
 	operand types.
 
